# OpenGL-Game-Engine

./: .gitignore  CMakeLists.txt  OpenGL-Game-Engine.sln  README.md
Dependencies/: gl.h  glm.h
Dependencies/include/: gl.h  glm.h
ExampleGame/: CMakeLists.txt  ExampleGame.vcxproj  main.cpp
ExampleGame/Assets/Materials/: Default.mat  Dragon.mat  Fox.mat  Water.mat
ExampleGame/Assets/Scenes/: Test.scene
ExampleGame/Assets/Scripts/: CameraController.cpp  CameraController.h  FunScript.cpp  FunScript.h
ExampleGame/Assets/Shaders/: Default.frag  Default.vert  Water.frag  Water.vert
ExampleGame/Code/: FunScript.cpp
ExampleGame/Dependencies/: OpenGL-Game-Engine.h  glm.h
ExampleGame/Dependencies/Shaders/: Lighting.txt
OpenGL-Game-Engine/: CMakeLists.txt  OpenGL-Game-Engine.vcxproj
OpenGL-Game-Engine/Export/: OpenGL-Game-Engine.h
OpenGL-Game-Engine/Source/: Application.cpp  Application.h  Camera.cpp  Camera.h  Color.cpp  Color.h  Component.cpp  Component.h  ComponentSystem.cpp  ComponentSystem.h  Export.h  GameObject.cpp  GameObject.h  Input.cpp  Input.h  Light.cpp  Light.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  MeshRenderer.cpp  MeshRenderer.h  Scene.cpp  Scene.h  Screen.cpp  Screen.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  Texture2D.cpp  Texture2D.h  Time.cpp  Time.h  Transfom.h  Transform.cpp  Window.cpp  Window.h  main.cpp
OpenGL-Game-Engine/Source/Buffers/: Buffer.cpp  Buffer.h  IndexBuffer.cpp  IndexBuffer.h  VertexArray.cpp  VertexArray.h
OpenGL-Game-Engine/Source/Collisions/: BoxCollider.cpp  BoxCollider.h  CollisionManager.cpp  CollisionManager.h
OpenGL-Game-Engine/Source/UI/: UICamera.h  UISprite.h
OpenGL-Game-Engine/Source/Utils/: FileIO.cpp  FileIO.h  ObjLoader.cpp  ObjLoader.h  Parser.cpp  Parser.h  RegisterDLLComponents.cpp  RegisterDLLComponents.h  TextureUtils.cpp  TextureUtils.h
OpenGL-Game-Engine/Source/Water/: WaterFrameBuffer.cpp  WaterFrameBuffer.h
